--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "description": "NodalpiNG is a Docker hosting an Angular Base container",
   "author": {
-    "name": "Guillaume Isabelle",
+    "name": "Guillaume Isabelle"
   }, 
   "contributors": [
  
