--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dk:stop": "./stopdocker", 
     "dk:publish:tag":"docker tag nodalping jgwill/nodalping",
     "dk:publish:push":"docker push jgwill/nodalping:latest",
-    "dk:tag-publish":"yarn dk:publish:tag && dk:publish:push",
+    "dk:tag-publish":"yarn dk:publish:tag && yarn dk:publish:push",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod --aot --buildOptimizer --commonChunk --vendorChunk --optimization --progress",
