--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodalping",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "NodalpiNG is a Docker hosting an Angular Base container",
   "author": {
     "name": "Guillaume Isabelle"
@@ -19,7 +19,7 @@
     "dk:stop": "./stopdocker", 
     "dk:publish:tag":"docker tag nodalping jgwill/nodalping",
     "dk:publish:push":"docker push jgwill/nodalping:latest",
-    "dk:tag-publish":"yarn dk:publish:tag && yarn dk:publish:push",
+    "dk:tag-publish":"npm version patch && yarn dk:publish:tag && yarn dk:publish:push",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod --aot --buildOptimizer --commonChunk --vendorChunk --optimization --progress",
